--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ matplotlib==3.3.3
 opensmile==1.0.1
 optuna==2.3.0
 pandas==1.1.4
+pylint==2.6.0
 pytorch-lightning==1.0.8
 seaborn==0.11.0
 torch==1.7.0
