--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ optuna==2.3.0
 pandas==1.1.4
 pylint==2.6.0
 pytorch-lightning==1.0.8
+scikit-learn==0.23.2
 seaborn==0.11.0
 torch==1.7.0
 torchvision==0.8.1
