--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ matplotlib==3.3.4
 opensmile==2.0.0
 optuna==2.5.0
 pandas==1.2.2
+pycm==3.0
 pylint==2.7.2
 pytorch-lightning==1.2.1
 scikit-learn==0.24.1
